# View_Factor_Computation_With_Radiance

./: README.md  setup.cfg
examples/: radiative_surfaces_and_manager_definition.py  radiative_surfaces_definition.py  radiative_surfaces_manager_radiance_file_generation.py
src/radiance_comp_vf/: decorators.py
src/radiance_comp_vf/radiative_surface/: __init__.py  lwr_manager.py  radiative_surface_class.py  radiative_surface_manager_class.py
src/radiance_comp_vf/utils/: __init__.py  utils_batches.py  utils_folder_manipulation.py  utils_generate_input_for_radiance.py  utils_minimum_vf_criterion.py  utils_objects_wrapper.py  utils_parallel_computing.py  utils_parallel_computing_with_return.py  utils_pyvista_polydata.py  utils_random_rectangle_generation.py  utils_run_radiance.py  utils_tables.py  utils_visibility.py
src/vf_computation_with_radiance/: __init__.py
src/vf_computation_with_radiance/radiative_surface/: lwr_manager.py  radiative_surface_class.py  radiative_surface_manager_class.py
src/vf_computation_with_radiance/utils/: __init__.py  utils_batches.py  utils_folder_manipulation.py  utils_generate_input_for_radiance.py  utils_parallel_computing.py  utils_parallel_computing_with_return.py  utils_run_radiance.py
tests/: useful_commands.md
tests/parallel_performance_evaluation/: compare_performances.py
tests/performance_evaluation/: performance_single_vs_parallel.py  preprocess_radiative_surface_pkl.py  utils_performance_evaluation.py
tests/radiative_surface/: radiative_surface_manager_test.py  radiative_surface_test.py
tests/radiative_surface/radiative_surface_manager_obj/: init_radiative_surface_manager_test.py  radiance_file_generation_radiative_surface_manager_test.py  (+3 more)
tests/utils/: test_generate_input_for_radiance.py  test_utils_2d_projections.py  test_utils_tables.py  test_utils_visibility_check.py  test_utils_wrapper.py  tets_utils_pyvista_polydata.py
(+7 files in other folders)
