[metadata]
name = radiance_comp_vf
version = 0.1
description = A package to compute the view factors between surfaces using Radiance
author = Your Name
author_email = elie.medioniwii@gmail.com
url = https://github.com/Eliewiii/View_Factor_Computation_With_Radiance
license = MIT

[options]
packages = find:
exclude =
    tests*
install_requires =
    numpy
    requests

[options.extras_require]
dev =
    pytest


[options.packages.find]
where = vf_computation_with_radiance
exclude =
    tests*

[tool:pytest]
pythonpath = src
addopts = --maxfail=1 --disable-warnings -q

[coverage:run]
branch = True