[metadata]
name = radiance_comp_vf
version = 0.1
description = A package to compute the view factors between surfaces using Radiance
author = Elie MEDIONI
author_email = elie.medioniwii@gmail.com
url = https://github.com/Eliewiii/View_Factor_Computation_With_Radiance
license = MIT

[options]
packages = find:
exclude =
    tests*
install_requires =
    numpy
    pyvista
    https://github.com/Eliewiii/geoplus_geometry_extension/archive/refs/tags/0.0.1.tar.gz

[options.extras_require]
dev =
    pytest

[options.packages.find]
where = src
exclude =
    tests*
    examples*


[tool:pytest]
pythonpath = .

[coverage:run]
branch = True